Bug 156583: Stray QuickTime, Real, or Java plugin frame can appear after switching to another tab. r=smichaud, sr=roc, a1.9.1b2=beltzner